[package]
name = "gitweb"
version = "0.2.3"
authors = ["Yoann Fleury <yoann.fleury@yahoo.com>"]
edition = "2018"
description = "Open the current remote repository in your browser"
repository = "https://github.com/yoannfleurydev/gitweb"
homepage = "https://github.com/yoannfleurydev/gitweb"
readme = "README.md"
keywords = ["git", "browser"]
categories = ["command-line-utilities"]
license = "Apache-2.0"
exclude = [
    "docs/",
    ".editorconfig",
    ".github/",
    "*.md"
]

[dependencies]
regex = "1"
structopt = "0.3"
open = "1.4"
git2 = "0.13"
log = "0.4"
flexi_logger = "0.16"
anyhow = "1.0"
thiserror = "1.0"
