[package]
authors = ["Yoann Fleury <yoann.fleury@yahoo.com>"]
categories = ["command-line-utilities"]
description = "Open the current remote repository in your browser"
edition = "2018"
exclude = [
  "docs/",
  ".editorconfig",
  ".github/",
  "*.md",
]
homepage = "https://github.com/yoannfleurydev/gitweb"
keywords = ["git", "browser"]
license = "Apache-2.0"
name = "gitweb"
readme = "README.md"
repository = "https://github.com/yoannfleurydev/gitweb"
version = "0.3.1"

[dependencies]
anyhow = "1.0"
flexi_logger = "0.17"
git-url-parse = "0.3"
git2 = "0.13"
log = "0.4"
open = "1.7"
regex = "1"
structopt = "0.3"
thiserror = "1.0"
