[package]
authors = ["Yoann Fleury <yoann.fleury@yahoo.com>"]
categories = ["command-line-utilities"]
description = "Open the current remote repository in your browser"
edition = "2018"
exclude = [
  "docs/",
  ".editorconfig",
  ".github/",
  "*.md",
]
homepage = "https://github.com/yoannfleurydev/gitweb"
keywords = ["git", "browser"]
license = "Apache-2.0"
name = "gitweb"
readme = "README.md"
repository = "https://github.com/yoannfleurydev/gitweb"
version = "0.3.3"

[dependencies]
anyhow = "1.0"
flexi_logger = {version = "0.21", features = ["use_chrono_for_offset"]}
git-url-parse = "0.4"
git2 = "0.13"
log = "0.4"
open = "2.0"
structopt = "0.3"
thiserror = "1.0"
